Fix connectors not aligning properly

--- a/opsi/frontend/styles/node.css
+++ b/opsi/frontend/styles/node.css
@@ -51,13 +51,9 @@
  #preference input {
      display: block;
      margin: 5px auto;
-    /* margin: 5px;
-     */
-    /* text-align: center;
-     */
 }
  #canvas, #container, #prefs-container {
-     width: 96%;
+     width: 100%;
      height: 100%;
      position: absolute;
      top: 0;
@@ -68,18 +64,18 @@
      background-size: 50px 50px;
 }
  #prefs-container {
+     width: 96%;
      text-align: center;
      padding-left: 60px;
 }
  #upload-form {
      margin: 10px;
-     /* min-width: 15vw; */
-     /* max-width: 20vw; */
 }
 
 input[type=button] {
      background: linear-gradient(0deg,#e7e5e3 0,#f5f4f3 75%);
 }
+
 .strInput {
     /* probably hacky */
     max-width: 180px;
